--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,5 @@ PythonBot/comm/__pycache__/*.pyc
 PythonBot/comm/__pycache__/*.cpython-36.pyc
 PythonBot/comm/__pycache__/*
 */logs/*
+*/venv/*
+*/.idea/*
