--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,8 @@ services:
 
   mongodb:
     image: mongo:latest
-    environment:
-      - "MONGO_INITDB_ROOT_USERNAME=undef"
-      - "MONGO_INITDB_ROOT_PASSWORD=undef"
+    env_file:
+      - .env
     volumes:
       - mongo_data:/data/db
     restart: unless-stopped
