--- a/PythonBot/requirements.txt
+++ b/PythonBot/requirements.txt
@@ -9,6 +9,7 @@ click==7.1.1
 discord==1.0.1
 discord.py==1.3.4
 Flask==1.1.2
+Flask-Cors==3.0.8
 Flask-HTTPAuth==3.3.0
 httpretty==1.0.2
 idna==2.9
@@ -18,6 +19,7 @@ MarkupSafe==1.1.1
 multidict==4.7.5
 opuslib==3.0.1
 Pillow==7.1.1
+pre-commit==2.6.0
 pycparser==2.20
 pymongo==3.10.1
 PyMySQL==0.9.3
@@ -34,4 +36,3 @@ Werkzeug==1.0.1
 wikipedia==1.4.0
 yarl==1.4.2
 youtube-dl==2020.06.16.1
-Flask-Cors==3.0.8
