--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     volumes:
       - ./PythonBot:/usr/src/PythonBot
     restart: unless-stopped
-
+    logging:
+      options:
+        max-size: "200m"
+        max-file: "20"
 
   pythonbot_api:
     build:
@@ -17,6 +20,10 @@ services:
       - 5000:5000
     entrypoint: python -u run_api.py
     restart: unless-stopped
+    logging:
+      options:
+        max-size: "200m"
+        max-file: "20"
 
   mongodb:
     image: mongo:4.2
@@ -25,6 +32,10 @@ services:
     volumes:
       - mongo_data:/data/db
     restart: unless-stopped
+    logging:
+      options:
+        max-size: "200m"
+        max-file: "20"
 
 volumes:
   mongo_data:
