[github actions] update pre commit and use it in github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,13 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Setup Python
-      uses: actions/setup-python@v1.2.0
+      uses: actions/setup-python@v2
       with:
         # Version range or exact version of a Python version to use, using SemVer's version range syntax.
         python-version: 3.8
+
+    - name: Run pre-commit
+      uses: pre-commit/action@v2.0.0
 
     # Setting up fake secrets
     - name: Setup fake secrets
